--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -43,6 +43,10 @@ jobs:
         run: |
           flake8
 
+      - name: Test with pytest
+        run: |
+          pytest
+
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
